# gstreamer-playground

./: README.md
gst-rtsp-sample/: CMakeLists.txt  README.md  test-rtsp-video-server.cpp
locfilter/: CMakeLists.txt  README.md  gstlocfilter.cpp  gstlocfilter.h  localisation
